Add Tab, ServerMessages, Roleplay and PrivateMessage modules

--- a/bin/main/config.yml
+++ b/bin/main/config.yml
@@ -9,18 +9,13 @@ settings:
   prefix: '&7[&bOriginChat&7]'
 
 # Настройки форматирования чата
-chat:
-  # Формат сообщений в чате (поддерживает MiniMessage и HEX цвета)
-  format: '<gray>[<color:#00AAFF>%player_name%</color>]</gray> <white>%message%</white>'
-  # Включить/выключить поддержку HEX цветов
-  hex-colors: true
-  # Включить/выключить поддержку MiniMessage
-  mini-message: true
-  # Максимальная длина сообщения
-  max-message-length: 256
 
 # Настройки модулей
 modules:
   # Включенные модули
   enabled:
     - 'chat'
+    - 'tab'
+    - 'pm'
+    - 'roleplay'
+    - 'servermessages'
