--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    //id("io.github.goooler.shadow") version "8.1.8"
 }
 
 group = 'me.nagibatirowanie'
@@ -16,10 +17,16 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        url = 'https://repo.extendedclip.com/releases/'
+    }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
+    compileOnly 'net.luckperms:api:5.4'
+    compileOnly 'me.clip:placeholderapi:2.11.6'
+    implementation("org.ahocorasick:ahocorasick:0.4.0")
 }
 
 tasks {
@@ -29,21 +36,35 @@ tasks {
         // Your plugin's jar (or shadowJar if present) will be used automatically.
         minecraftVersion("1.21")
     }
+    
+    // Настройка Shadow JAR для включения зависимостей и переименования пакетов
+    //shadowJar {
+        // Настройка relocate для избежания конфликтов с другими плагинами
+        //relocate('org.ahocorasick', 'me.nagibatirowanie.originchat.libs.ahocorasick')
+        
+        // Исключаем ненужные файлы из итогового JAR
+        //minimize()
+        
+        // Настройка архива
+        //archiveClassifier.set('')
+    //}
+    
+    // Привязываем задачу shadowJar к задаче build
+    build {
+        //dependsOn(shadowJar)
+    }
 }
 
 def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
-
+    
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release.set(targetJavaVersion)
     }
@@ -57,3 +78,4 @@ processResources {
         expand props
     }
 }
+
