Fix Legacy formatting codes error

--- a/bin/main/config.yml
+++ b/bin/main/config.yml
@@ -16,6 +16,8 @@ modules:
   enabled:
     - 'chat'
     - 'tab'
-    - 'pm'
+    - 'private_messages'
     - 'roleplay'
-    - 'servermessages'
+    - 'server_messages'
+    - 'locale_advancements'
+    - 'locale_deaths'
