--- a/bin/main/modules/chat.yml
+++ b/bin/main/modules/chat.yml
@@ -1,56 +1,50 @@
-# Конфигурация модуля чата
+# Chat module configuration
 version: 1
 
-# Включен ли модуль
 enabled: true
 
-# Поддержка HEX цветов
 hex-colors: true
 
-# Поддержка MiniMessage формата
 mini-message: true
 
-# Максимальная длина сообщения
 max-message-length: 256
 
-# Настройки форматирования чата
 format:
-  # Основной формат сообщений (поддерживает MiniMessage и HEX цвета)
+  # Main message format (supports MiniMessage and HEX colors)
   message: '<gray>[<color:#00AAFF>%player_name%</color>]</gray> <white>%message%</white>'
-  # Формат для личных сообщений
-  private-message: '<gray>[<color:#FF55FF>ЛС</color>] <color:#00AAFF>%sender%</color> -> <color:#00AAFF>%receiver%</color>:</gray> <white>%message%</white>'
+  # Private message format
+  private-message: '<gray>[<color:#FF55FF>PM</color>] <color:#00AAFF>%sender%</color> -> <color:#00AAFF>%receiver%</color>:</gray> <white>%message%</white>'
 
-# Конфигурация чатов
 chats:
-  # Глобальный чат (без префикса)
+  # Global chat (no prefix)
   global:
     prefix: "!"
     radius: -1
-    format: "<gray>[Глобальный]</gray> <white>{player}: {message}</white>"
+    format: "<gray>[Global]</gray> <white>{player}: {message}</white>"
     permission-write: ""
     permission-view: ""
   
-  # Локальный чат (префикс: !)
+  # Local chat (prefix: !)
   local:
     prefix: ""
     radius: 50
-    format: "<yellow>[Локальный]</yellow> <white>{player}: {message}</white>"
+    format: "<yellow>[Local]</yellow> <white>{player}: {message}</white>"
     permission-write: ""
     permission-view: ""
   
-  # Приватный чат (префикс: @)
+  # Private chat (prefix: @)
   private:
     prefix: "@"
     radius: -1
-    format: "<red>[Приватный]</red> <white>{player}: {message}</white>"
+    format: "<red>[Private]</red> <white>{player}: {message}</white>"
     permission-write: "originchat.chat.private"
     permission-view: "originchat.chat.private"
   
-  # Чат администрации (префикс: #)
+  # Admin chat (prefix: #)
   admin:
     prefix: "#"
     radius: -1
-    format: "<gold>[Админ]</gold> <white>{player}: {message}</white>"
+    format: "<gold>[Admin]</gold> <white>{player}: {message}</white>"
     permission-write: "originchat.chat.admin"
     permission-view: "originchat.chat.admin"
 
@@ -58,4 +52,9 @@ cooldown:
   default: 3
   originchat.moder: 2
   originchat.admin: 0
-cooldown-message: "⏳ Подождите {cooldown} секунд перед следующим сообщением!"
+
+messages:
+  no-permission: "&c❗ You do not have permission to send messages to this chat room."
+  nobody-heard: "&c❗ No one heard your message."
+  chat-not-found: "&c❗ No chat room found. Use the prefix to select a chat room."
+  cooldown: "&c⏳ Подождите {cooldown} секунд перед следующим сообщением!"
