--- a/bin/main/modules/locale_deaths.yml
+++ b/bin/main/modules/locale_deaths.yml
@@ -1,21 +1,22 @@
-# Конфигурация модуля локализованных сообщений о смерти
+# Localized death messages module configuration
+version: 1
 
 death_messages:
-  # Включить модуль
+  # Enable module
   enabled: true
   
-  # Отключить стандартные сообщения о смерти
+  # Disable vanilla death messages
   disable-vanilla-messages: true
   
-  # Воспроизводить звук при смерти игрока
+  # Play sound on player death
   play_sound: true
   
-  # Звук, который будет воспроизводиться при смерти игрока
-  # Список доступных звуков: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
+  # Sound to play on player death
+  # List of available sounds: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
   death_sound: "ENTITY_CAT_DEATH"
   
-  # Префикс сообщения о смерти
+  # Death message prefix
   prefix: "&c☠ "
   
-  # Суффикс сообщения о смерти
+  # Death message suffix
   suffix: ""
