--- a/bin/main/modules/server_messages.yml
+++ b/bin/main/modules/server_messages.yml
@@ -1,31 +1,32 @@
-# Конфигурация модуля серверных сообщений
+version: 1
+# Server messages module configuration
 
-# Включить/выключить сообщения о входе игроков
+# Enable/disable player join messages
 join_message_enabled: true
 
-# Включить/выключить сообщения о выходе игроков
+# Enable/disable player leave messages
 leave_message_enabled: true
 
-# Включить/выключить персональные приветственные сообщения
+# Enable/disable personal welcome messages
 personal_welcome_enabled: true
 
-# Список сообщений о входе игроков (выбирается случайное)
-# Доступные плейсхолдеры: {player} - имя игрока
+# List of player join messages (randomly selected)
+# Available placeholders: {player} - player name
 join_messages:
-  - "&a+ &f{player} &7присоединился к серверу"
-  - "&aДобро пожаловать, &f{player}!"
-  - "&aИгрок &f{player} &aзашел на сервер"
+  - "&a+ &f{player} &7joined the server"
+  - "&aWelcome, &f{player}!"
+  - "&aPlayer &f{player} &ajoined the server"
 
-# Список сообщений о выходе игроков (выбирается случайное)
-# Доступные плейсхолдеры: {player} - имя игрока
+# List of player leave messages (randomly selected)
+# Available placeholders: {player} - player name
 leave_messages:
-  - "&c- &f{player} &7покинул сервер"
-  - "&cИгрок &f{player} &cвышел с сервера"
-  - "&f{player} &7отключился"
+  - "&c- &f{player} &7left the server"
+  - "&cPlayer &f{player} &cleft the server"
+  - "&f{player} &7disconnected"
 
-# Список персональных приветственных сообщений (выбирается случайное)
-# Доступные плейсхолдеры: {player} - имя игрока
+# List of personal welcome messages (randomly selected)
+# Available placeholders: {player} - player name
 personal_welcome_messages:
-  - "&6Добро пожаловать на сервер, &f{player}&6!"
-  - "&6Приятной игры, &f{player}&6!"
-  - "&6Рады видеть вас снова, &f{player}&6!"
+  - "&6Welcome to the server, &f{player}&6!"
+  - "&6Enjoy your game, &f{player}&6!"
+  - "&6Glad to see you again, &f{player}&6!"
