Add animation localization, Added Ukrainian lcoalization

--- a/bin/main/animations.yml
+++ b/bin/main/animations.yml
@@ -1,11 +1,22 @@
 # Конфигурация анимаций для OriginChat
-# Формат: 
+# Формат без локализации: 
 # имя_анимации:
 #   interval: интервал_в_тиках (20 тиков = 1 секунда)
 #   frames:
 #     - кадр1
 #     - кадр2
 #     - и т.д.
+#
+# Формат с локализацией:
+# имя_анимации:
+#   interval: интервал_в_тиках (20 тиков = 1 секунда)
+#   frames:
+#     ru: # код языка
+#       - кадр1 на русском
+#       - кадр2 на русском
+#     en: # код языка
+#       - кадр1 на английском
+#       - кадр2 на английском
 
 # Пример радужной анимации
 rainbow:
@@ -18,24 +29,37 @@ rainbow:
     - "&bР&9а&cд&6у&eг&aа"
     - "&9Р&cа&6д&eу&aг&bа"
 
-# Пример мигающего текста
+# Пример мигающего текста с локализацией
 blink:
   interval: 10
   frames:
-    - "&e&lВНИМАНИЕ!"
-    - "&c&lВНИМАНИЕ!"
-    - "&e&lВНИМАНИЕ!"
-    - "&c&lВНИМАНИЕ!"
+    ru: # русский язык
+      - "&e&lВНИМАНИЕ!"
+      - "&c&lВНИМАНИЕ!"
+      - "&e&lВНИМАНИЕ!"
+      - "&c&lВНИМАНИЕ!"
+    en: # английский язык
+      - "&e&lWARNING!"
+      - "&c&lWARNING!"
+      - "&e&lWARNING!"
+      - "&c&lWARNING!"
 
-# Пример анимации с плейсхолдером игрока
+# Пример анимации с плейсхолдером игрока и локализацией
 welcome:
   interval: 15
   frames:
-    - "&aДобро пожаловать, &e{player}!"
-    - "&eДобро пожаловать, &6{player}!"
-    - "&6Добро пожаловать, &c{player}!"
-    - "&cДобро пожаловать, &6{player}!"
-    - "&6Добро пожаловать, &e{player}!"
+    ru: # русский язык
+      - "&aДобро пожаловать, &e{player}!"
+      - "&eДобро пожаловать, &6{player}!"
+      - "&6Добро пожаловать, &c{player}!"
+      - "&cДобро пожаловать, &6{player}!"
+      - "&6Добро пожаловать, &e{player}!"
+    en: # английский язык
+      - "&aWelcome, &e{player}!"
+      - "&eWelcome, &6{player}!"
+      - "&6Welcome, &c{player}!"
+      - "&cWelcome, &6{player}!"
+      - "&6Welcome, &e{player}!"
 
 # Пример загрузки
 loading:
