Add ServerBrand module, fix bugs, update AutoUdpate :)

--- a/bin/main/config.yml
+++ b/bin/main/config.yml
@@ -28,4 +28,5 @@ modules:
     - 'server_messages'
     - 'locale_advancements'
     - 'locale_deaths'
-    - 'auto_translate'
+    - 'scoreboard'
+    - 'server_brand'
