--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,4 +28,5 @@ modules:
     - 'server_messages'
     - 'locale_advancements'
     - 'locale_deaths'
-    - 'auto_translate'
+    - 'scoreboard'
+    - 'server_brand'
